sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:6: error: type mismatch;
 found   : Int
 required: Boolean
  while (a!=0 && ecart <==1) {
                 ^